--- a/iBach/iBach/iBach/Classes/Modules/Player/LargePlayer.storyboard
+++ b/iBach/iBach/iBach/Classes/Modules/Player/LargePlayer.storyboard
@@ -14,31 +14,31 @@
         <scene sceneID="CEe-eX-jw1">
             <objects>
                 <viewController storyboardIdentifier="Player" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Tza-Tl-667" customClass="MusicPlayerViewController" customModule="iBach" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="D3V-W4-fmP">
+                    <view key="view" contentMode="scaleToFill" id="D3V-W4-fmP" customClass="AppView" customModule="iBach" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BhW-63-8FQ">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BhW-63-8FQ" customClass="AppTextView" customModule="iBach" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W9y-m7-a5Q">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W9y-m7-a5Q" customClass="AppView" customModule="iBach" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6N-Ob-1UM">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6N-Ob-1UM" customClass="AppLabel" customModule="iBach" customModuleProvider="target">
                                                 <rect key="frame" x="8" y="414" width="359" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song Artist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F9z-L9-b3h">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song Artist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F9z-L9-b3h" customClass="AppSubhead" customModule="iBach" customModuleProvider="target">
                                                 <rect key="frame" x="8" y="452" width="359" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" red="0.32565315950000001" green="0.183454901" blue="0.74090373519999997" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LnO-zy-rL4">
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LnO-zy-rL4" customClass="AppButton" customModule="iBach" customModuleProvider="target">
                                                 <rect key="frame" x="8" y="28" width="46" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="Return"/>
@@ -60,7 +60,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </imageView>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gH-Up-32J">
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gH-Up-32J" customClass="AppButton" customModule="iBach" customModuleProvider="target">
                                                 <rect key="frame" x="120" y="497" width="134" height="55"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" image="Pause"/>
@@ -68,7 +68,7 @@
                                                     <action selector="pauseSong:" destination="Tza-Tl-667" eventType="touchUpInside" id="xz2-IE-WFM"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tvt-8L-t5U">
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tvt-8L-t5U" customClass="AppButton" customModule="iBach" customModuleProvider="target">
                                                 <rect key="frame" x="8" y="497" width="134" height="55"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" image="Backward"/>
@@ -76,7 +76,7 @@
                                                     <action selector="buttonPreviousClick:" destination="Tza-Tl-667" eventType="touchUpInside" id="CJ3-Cd-hlg"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HvF-uV-MXG">
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HvF-uV-MXG" customClass="AppButton" customModule="iBach" customModuleProvider="target">
                                                 <rect key="frame" x="233" y="497" width="134" height="55"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" image="Forward"/>
@@ -113,6 +113,14 @@
                                                     <action selector="changeVolume:" destination="Tza-Tl-667" eventType="valueChanged" id="KBr-ym-Hy1"/>
                                                 </connections>
                                             </slider>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1RK-WD-iqw" userLabel="Lyrics" customClass="AppButton" customModule="iBach" customModuleProvider="target">
+                                                <rect key="frame" x="313" y="28" width="62" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Lyrics"/>
+                                                <connections>
+                                                    <segue destination="7Lm-rh-gYp" kind="presentation" id="oga-TL-Yfv"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
@@ -156,6 +164,74 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LHM-Mj-WfF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="164" y="155.17241379310346"/>
+        </scene>
+        <!--Lyrics View Controller-->
+        <scene sceneID="R8Q-Ni-9k9">
+            <objects>
+                <viewController id="7Lm-rh-gYp" customClass="LyricsViewController" customModule="iBach" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Zfe-jt-f65" customClass="AppView" customModule="iBach" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l3z-hd-82K" customClass="AppTextView" customModule="iBach" customModuleProvider="target">
+                                <rect key="frame" x="16" y="89" width="343" height="578"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <attributedString key="attributedText">
+                                    <fragment>
+                                        <string key="content">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <attributes>
+                                            <font key="NSFont" size="18" name="ComicSansMS-Bold"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lyrics" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hwt-7z-OIf" customClass="AppLabel" customModule="iBach" customModuleProvider="target">
+                                <rect key="frame" x="16" y="36" width="343" height="29"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1LF-lG-AK7" customClass="AppButton" customModule="iBach" customModuleProvider="target">
+                                <rect key="frame" x="329" y="32.5" width="30" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="X"/>
+                                <connections>
+                                    <action selector="didSelectCloseButton:" destination="7Lm-rh-gYp" eventType="touchUpInside" id="rAf-tc-aM9"/>
+                                </connections>
+                            </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="wEp-5L-tUv">
+                                <rect key="frame" x="169" y="325" width="37" height="37"/>
+                                <color key="color" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="l3z-hd-82K" firstAttribute="leading" secondItem="wlP-dp-kl5" secondAttribute="leading" constant="16" id="2WE-5w-eRh"/>
+                            <constraint firstItem="wlP-dp-kl5" firstAttribute="trailing" secondItem="1LF-lG-AK7" secondAttribute="trailing" constant="16" id="5zP-8a-oGa"/>
+                            <constraint firstItem="l3z-hd-82K" firstAttribute="top" secondItem="Hwt-7z-OIf" secondAttribute="bottom" constant="24" id="CFO-7u-xNl"/>
+                            <constraint firstItem="Hwt-7z-OIf" firstAttribute="top" secondItem="wlP-dp-kl5" secondAttribute="top" constant="16" id="EDR-wh-sh1"/>
+                            <constraint firstItem="wlP-dp-kl5" firstAttribute="trailing" secondItem="l3z-hd-82K" secondAttribute="trailing" constant="16" id="Wc9-N4-bB7"/>
+                            <constraint firstItem="wEp-5L-tUv" firstAttribute="centerX" secondItem="wlP-dp-kl5" secondAttribute="centerX" id="a5r-kC-7qI"/>
+                            <constraint firstItem="wlP-dp-kl5" firstAttribute="trailing" secondItem="Hwt-7z-OIf" secondAttribute="trailing" constant="16" id="dMD-rn-ghv"/>
+                            <constraint firstItem="1LF-lG-AK7" firstAttribute="centerY" secondItem="Hwt-7z-OIf" secondAttribute="centerY" id="ibE-Vo-u6g"/>
+                            <constraint firstItem="Hwt-7z-OIf" firstAttribute="leading" secondItem="wlP-dp-kl5" secondAttribute="leading" constant="16" id="lX1-g3-mJG"/>
+                            <constraint firstItem="wEp-5L-tUv" firstAttribute="centerY" secondItem="wlP-dp-kl5" secondAttribute="centerY" id="pda-Aj-uVm"/>
+                            <constraint firstAttribute="bottom" secondItem="l3z-hd-82K" secondAttribute="bottom" id="vBr-cb-Cdi"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="wlP-dp-kl5"/>
+                    </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="wEp-5L-tUv" id="3YU-qd-3Fq"/>
+                        <outlet property="lyricsTextView" destination="l3z-hd-82K" id="plu-8I-1mX"/>
+                        <outlet property="songTitleLabel" destination="Hwt-7z-OIf" id="1Pd-Q5-cMU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Rf-l3-OYO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1249" y="155"/>
         </scene>
     </scenes>
     <resources>
